--- a/redis-deployment.yml
+++ b/redis-deployment.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: gitlab
 spec:
   selector:
-    app: gitlab-redis
+   app.kubernetes.io/name: gitlab-redis
   replicas: 1
   template:
     metadata:
