--- a/gitlab-deployment.yml
+++ b/gitlab-deployment.yml
@@ -3,7 +3,14 @@ kind: Deployment
 metadata:
   name: gitlab
   namespace: gitlab
+    labels:
+    app: gitlab
+    version: v1
+    kubernetes.io/cluster-service: "true"
 spec:
+  selector:
+    matchLabels:
+      app: gitlab
   replicas: 1
   template:
     metadata:
