--- a/redis-deployment.yml
+++ b/redis-deployment.yml
@@ -18,7 +18,7 @@ spec:
         name: gitlab-redis
     spec:
       containers:
-      - name: redis
+      - name: gitlab-redis
         image: redis:3.2.4
         ports:
         - name: redis
