--- a/postgresql-deployment.yml
+++ b/postgresql-deployment.yml
@@ -16,6 +16,7 @@ spec:
     metadata:
       labels:
         name: gitlab-postgresql
+        app: gitlab-postgresql
     spec:
       containers:
       - name: postgresql
