--- a/gitlab-svc-nodeport.yml
+++ b/gitlab-svc-nodeport.yml
@@ -4,11 +4,11 @@ metadata:
   name: gitlab-nodeport
   namespace: gitlab
   labels:
-    name: gitlab
+    name: gitlab-nodeport
 spec:
   type: NodePort
   selector:
-    name: gitlab
+    name: gitlab-nodeport
   ports:
     - name: ssh
       port: 22
