--- a/gitlab-svc.yml
+++ b/gitlab-svc.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab
+  name: gitlabsvc
   namespace: gitlab
   labels:
-    name: gitlab
+    name: gitlabsvc
 spec:
   type: LoadBalancer
   selector:
-    name: gitlab
+    name: gitlabsvc
   ports:
     - name: http
       port: 90
