--- a/gitlab-svc.yml
+++ b/gitlab-svc.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab-svc
+  name: gitlab
   namespace: gitlab
   labels:
-    name: gitlab-svc
+    name: gitlab
 spec:
   type: LoadBalancer
   selector:
