--- a/gitlab-svc.yml
+++ b/gitlab-svc.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitlab
+  name: gitlab-service
   namespace: gitlab
   labels:
-    name: gitlab
+    name: gitlab-service
 spec:
   type: LoadBalancer
   selector:
-   app.kubernetes.io/name: gitlab
+    name: gitlab-service
   ports:
     - name: http
       port: 90
